[gd_scene load_steps=2 format=3 uid="uid://daqgr8l428blh"]

[ext_resource type="Script" path="res://system_menu/hbox_enemy_spawn.gd" id="1_82hkv"]

[node name="hbox_enemy_spawn" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_82hkv")

[node name="lbl_name" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="sb_qty" type="SpinBox" parent="."]
visible = false
layout_mode = 2
rounded = true

[node name="btn_down" type="Button" parent="."]
layout_mode = 2
text = "-"

[node name="btn_up" type="Button" parent="."]
layout_mode = 2
text = "+"

[node name="lbl_count" type="Label" parent="."]
layout_mode = 2
text = "0"

[connection signal="button_up" from="btn_down" to="." method="_on_btn_down_button_up"]
[connection signal="button_up" from="btn_up" to="." method="_on_btn_up_button_up"]
